refactor progetto, modifica di entities immagine e Fotografo